[metadata]
version = 0.63.0
license-file = LICENSE
description = Machine Learning Orchestration
long-description-content-type = text/markdown
long-description = file: README.md
platforms = any
author = Evgeny Shulman
author-email = evgeny.shulman@databand.ai
maintainer = Evgeny Shulman
maintainer-email = evgeny.shulman@databand.ai
keywords = orchestration, data, machinelearning
url = https://github.com/databand-ai/dbnd
project-urls =
    Documentation = https://dbnd.readme.io/
    Bug-Tracker = https://github.com/databand-ai/dbnd/issues
    Source-Code = https://github.com/databand-ai/dbnd
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
exclude = docs,databand/_vendor,.tox,build,dist,__pycache__
ignore = E203,E402,W503,F401,I001,I003,I004
max-line-length = 160

[isort]
skip_glob =
    dbnd/_vendor/*
    dbnd/_vendor_package/*

# Vertical Hanging Indent
# https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
combine_as_imports = True
line_length = 88
atomic = true
lines_after_imports = 2
lines_between_types = 1
skip = dbnd/tasks/__init__.py,dbnd/__init__.py

float_to_top = true
ensure_newline_before_comments = true
remove_redundant_aliases = true
use_parentheses = true

known_first_party=
    databand,
    dbnd,
    dbnd_airflow,
    dbnd_airflow_operator,
    dbnd_airflow_contrib,
    dbnd_airflow_export,
    dbnd_airflow_windows,
    airflow_monitor,
    dbnd_aws,
    dbnd_azure,
    dbnd_databricks,
    dbnd_tensorflow,
    dbnd_docker,
    dbnd_redshift,
    dbnd_examples,
    dbnd_gcp,
    dbnd_luigi,
    dbnd_postgres,
    dbnd_hdfs,
    dbnd_mlflow,
    dbnd_qubole,
    dbnd_spark,
    dbnd_snowflake,
    dbnd_test_scenarios,
    tests,
    test_dbnd,
    test_dbnd_airflow,
    test_dbnd_airflow_monitor,
    test_dbnd_airflow,
    targets,
    process_data_spark_with_track_functions_2

[tool:pytest]
minversion = 3.0
strict = true
junit_family = legacy
addopts = -ra  -p no:warnings --durations=10
testpaths = tests
filterwarnings =
    once::Warning
    ignore::ImportWarning

[coverage:run]
branch = True
omit =
    .tox
    **/.tox

[coverage:paths]
source =
    databand
    dbnd
    targets
    .tox/*/lib/python*/site-packages/dbnd
    .tox/pypy/site-packages/dbnd

[coverage:report]
show_missing = True
