[metadata]
version = 0.66.1
license-file = LICENSE
description = Machine Learning Orchestration
long-description-content-type = text/markdown
long-description = file: README.md
platforms = any
author = Evgeny Shulman
author-email = evgeny.shulman@databand.ai
maintainer = Evgeny Shulman
maintainer-email = evgeny.shulman@databand.ai
keywords = orchestration, data, machinelearning
url = https://github.com/databand-ai/dbnd
project-urls =
    Documentation = https://dbnd.readme.io/
    Bug-Tracker = https://github.com/databand-ai/dbnd/issues
    Source-Code = https://github.com/databand-ai/dbnd
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
exclude = docs,databand/_vendor,.tox,build,dist,__pycache__
ignore = E203,E402,W503,F401,I001,I003,I004
max-line-length = 160

[tool:pytest]
minversion = 3.0
strict = true
junit_family = legacy
addopts = -ra  -p no:warnings --durations=10
testpaths = tests
filterwarnings =
    once::Warning
    ignore::ImportWarning

[coverage:run]
branch = True
omit =
    .tox
    **/.tox

[coverage:paths]
source =
    databand
    dbnd
    targets
    .tox/*/lib/python*/site-packages/dbnd
    .tox/pypy/site-packages/dbnd

[coverage:report]
show_missing = True
