[metadata]
version = 1.0.7.3
license_file = LICENSE
description = Machine Learning Orchestration
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
author = Evgeny Shulman
author_email = evgeny.shulman@databand.ai
maintainer = Evgeny Shulman
maintainer_email = evgeny.shulman@databand.ai
keywords = orchestration, data, machinelearning
url = https://github.com/databand-ai/dbnd
project_urls =
    Documentation = https://dbnd.readme.io/
    Bug-Tracker = https://github.com/databand-ai/dbnd/issues
    Source-Code = https://github.com/databand-ai/dbnd
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[flake8]
exclude = _vendor,docs,.tox,build,dist,__pycache__
# 90    E231 missing whitespace after ','
# 8     E266 too many leading '#' for block comment
# 11    E402 module level import not at top of file
# 25    E501 line too long (226 > 160 characters)
# 1     E711 comparison to None should be 'if cond is None:'
# 1     E712 comparison to True should be 'if cond is True:' or 'if cond:'
# 10    E722 do not use bare 'except'
# 1     E731 do not assign a lambda expression, use a def
# 17    E741 ambiguous variable name 'l'
# 3     F401 'dbnd.tasks.*' imported but unused
# 2     F402 import 'parameter' from line 18 shadowed by loop variable
# 6     F522 '...'.format(...) has unused named argument(s): task_call
# 2     F523 '...'.format(...) has unused arguments at position(s): 0, 1
# 5     F541 f-string is missing placeholders
# 10    F811 redefinition of unused 'List' from line 4
# 44    F821 undefined name 'Union'
# 19    F841 local variable 'run_monitor' is assigned to but never used
# 5     F901 'raise NotImplemented' should be 'raise NotImplementedError'
# 39    W605 invalid escape sequence '\s'
# 2     E126 continuation line over-indented for hanging indent
# 225   W503 line break before binary operator
# 2     W504 line break after binary operator
# 2     E265 block comment should start with '# '
# 2     F403 'from pydeequ.analyzers import *' used; unable to detect undefined names
# 5     F405 'SparkSession' may be undefined, or defined from star imports: pydeequ.analyzers, pydeequ.repository
ignore = E231,E266,E402,E501,E711,E712,E722,E731,E741,F401,F402,F522,F523,F541,F811,F821,F841,F901,W605,E126,W503,W504,E265,F403,F405
extend-ignore = E203  # black compatibility
max-line-length = 160

[tool:pytest]
minversion = 3.0
strict = true
junit_family = legacy
addopts = -ra  -p no:warnings --durations=10
testpaths = tests
filterwarnings =
    once::Warning
    ignore::ImportWarning

[coverage:run]
branch = True
omit =
    .tox
    **/.tox

[coverage:paths]
source =
    databand
    dbnd
    targets
    .tox/*/lib/python*/site-packages/dbnd
    .tox/pypy/site-packages/dbnd

[coverage:report]
show_missing = True
